app/static/styles/chat-dark.css
h2 {
    font: 14px Arial, sans-serif;
    color: #fff;
    padding: 10px;
    text-align: center;
}

html, body {
    height: 100%;
}

* {
    padding: 0;
    list-style-type: none;
}

#wrapper {
    height: 100%;
    position: relative;
    width: 100%;
    overflow: hidden;
}

#roomList {
    width: inherit;
    height: 100%;
    position: absolute;
    top: 0;
    left: 0;
    background: #222;
}

#roomList li {
    cursor: move;
    border-bottom: 1px solid #000;
    border-top: 1px solid #333;
    cursor: pointer;
    padding: 10px 5px;
    color: #BBB;
    background: #1a1a1a;
    font: 12px Arial, sans-serif;
}

#roomList li:hover {
    background: #111;
    color: #CCC;
}

#roomEntry {
    width: inherit;
    position: absolute;
    bottom: 0px;
    color: #BBB;
    background: #1a1a1a;
    color: #fff;
    box-sizing: border-box;
    border: 1px solid #fff;
    border-radius: 4px;
}

#layoutContainer {
    width: 100%;
    height: 100%;
    position: absolute;
    top: 0;
    left: 0%;
}

.chatEntry {
    position: absolute;
    bottom: 0px;
    color: #BBB;
    background: #1a1a1a;
    width: 100%;
    display: block;
    box-sizing: border-box;
    border: 1px solid #BBB;
    border-radius: 4px;
}

.chatMessages {
    margin-bottom: 0px;
    bottom: 25px;
    display: block;
    overflow-y: auto;
    height: calc(100% - 25px);
    width: 100%;
    position: absolute;
    transform: translateZ(0);
}

.chatMessages li:nth-child(odd) {
    background: #1a1a1a;
    color: rgb(162, 162, 162);
}

.chatMessages li {
    padding: 5px 10px;
    color: rgb(162, 162, 162);
    overflow-wrap: break-word;
    word-wrap: break-word;
}

.chatMessages::-webkit-scrollbar-thumb {
    background-color: #000000;
    border: 2px solid #555555;
}
.chatMessages::-webkit-scrollbar {
    width: 7px;
}
.chatMessages::-webkit-scrollbar-track {
    background-color: #565555;
}

#chatMessage img {
    max-height: 160px;
    max-width: 200px;
    width: auto;
    height: auto;
}

#chatMessage .emoji{
    height: 1.2em;
}

/*Overriding bootstrap defaults for youtube preview*/
#chatMessage .embed-responsive-16by9 {
    height: 198px;
    width: 352px;
    padding-bottom: 0;
}

#timestamp {
    font-size: 60%;
    background: inherit;
    display: none;
    float: right;
}

